Implemented JWT generation, roles implementation, Swagger UI and custom exception handling